--- a/MVC_MultitecUA/Views/Proyecto/Details.cshtml
+++ b/MVC_MultitecUA/Views/Proyecto/Details.cshtml
@@ -38,6 +38,14 @@
         </dd>
 
         <dt>
+            Creador
+        </dt>
+
+        <dd>
+            @ViewData["creador"]
+        </dd>
+
+        <dt>
             @Html.DisplayNameFor(model => model.Estado)
         </dt>
 
