--- a/MVC_MultitecUA/Views/Evento/Edit.cshtml
+++ b/MVC_MultitecUA/Views/Evento/Edit.cshtml
@@ -64,7 +64,7 @@
             @Html.EditorFor(model => model.FechaInicio, new { htmlAttributes = new { @class = "form-control" }, @placeholder = "mm/dd/yyyy hh:mm" })
             @{ if (ViewData.ContainsKey("FIMayorFF"))
                 {
-                    <p class="text-danger" style="margin-left: 1em;"><span class="glyphicon glyphicon-remove"></span> La fecha de inicio no puede ser después o igual a la fecha de fin.</p>
+                    <p class="text-danger" style="margin-left: 1em;"><span class="glyphicon glyphicon-remove"></span> La fecha de inicio no puede ser mayor a la fecha de fin.</p>
 
                 }
             }
@@ -85,11 +85,11 @@
             @Html.EditorFor(model => model.FechaInicioInscripcion, new { htmlAttributes = new { @class = "form-control" }, @placeholder = "mm/dd/yyyy hh:mm" })
             @{ if (ViewData.ContainsKey("FIIMayorFTI"))
                 {
-                    <p class="text-danger" style="margin-left: 1em;"><span class="glyphicon glyphicon-remove"></span> La fecha de inicio de inscripción no puede ser después o igual a la fecha de tope de inscripción.</p>
+                    <p class="text-danger" style="margin-left: 1em;"><span class="glyphicon glyphicon-remove"></span> La fecha de inicio de inscripción no puede ser mayor a la fecha de tope de inscripción.</p>
                 }
                 else if (ViewData.ContainsKey("FIIMayorFF"))
                 {
-                    <p class="text-danger" style="margin-left: 1em;"><span class="glyphicon glyphicon-remove"></span> La fecha de inicio de inscripción no puede ser después o igual a la fecha de tope de inscripción.</p>
+                    <p class="text-danger" style="margin-left: 1em;"><span class="glyphicon glyphicon-remove"></span> La fecha de inicio de inscripción no puede ser mayor a la fecha de tope de inscripción.</p>
                 }
             }
         </div>
@@ -101,7 +101,7 @@
             @Html.EditorFor(model => model.FechaTopeInscripcion, new { htmlAttributes = new { @class = "form-control" }, @placeholder = "mm/dd/yyyy hh:mm" })
             @{ if (ViewData.ContainsKey("FTIMayorFF"))
                 {
-                    <p class="text-danger" style="margin-left: 1em;"><span class="glyphicon glyphicon-remove"></span> La fecha de tope de inscripción no puede ser después o igual a la fecha de fin.</p>
+                    <p class="text-danger" style="margin-left: 1em;"><span class="glyphicon glyphicon-remove"></span> La fecha de tope de inscripción no puede ser mayor a la fecha de fin.</p>
                 }
             }
         </div>
