--- a/MVC_MultitecUA/Views/Proyecto/Create.cshtml
+++ b/MVC_MultitecUA/Views/Proyecto/Create.cshtml
@@ -20,57 +20,61 @@
             <p class="text-danger" style="margin-left: 1em;"><span class="glyphicon glyphicon-remove"></span> No pueden haber campos vacios</p>
             <br />
         }
+        else if (ViewData.ContainsKey("error"))
+        {
+            <p class="text-danger" style="margin-left: 1em;"><span class="glyphicon glyphicon-remove"></span> @ViewData["error"]</p>
+        }
         else
         {
             <br /><br />
         }
-    }
-    <hr />
-    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-    <div class="form-group">
-        @Html.LabelFor(model => model.Nombre, htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.EditorFor(model => model.Nombre, new { htmlAttributes = new { @class = "form-control" } })
-            @{ if (ViewData.ContainsKey("nombreproyecto"))
-                {
-                    <p class="text-danger" style="margin-left: 1em;"><span class="glyphicon glyphicon-remove"></span> El nombre de este evento ya existe</p>
+        }
+        <hr />
+        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+        <div class="form-group">
+            @Html.LabelFor(model => model.Nombre, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.Nombre, new { htmlAttributes = new { @class = "form-control" } })
+                @{ if (ViewData.ContainsKey("nombreproyecto"))
+                    {
+                        <p class="text-danger" style="margin-left: 1em;"><span class="glyphicon glyphicon-remove"></span> El nombre de este evento ya existe</p>
+                    }
+                    else if (ViewData.ContainsKey("fomatonombreproyecto"))
+                    {
+                        <p class="text-danger" style="margin-left: 1em;"><span class="glyphicon glyphicon-remove"></span> De 4 a 30 caracteres. Letras, números y espacios.</p>
+                    }
                 }
-                else if (ViewData.ContainsKey("fomatonombreproyecto"))
-                {
-                    <p class="text-danger" style="margin-left: 1em;"><span class="glyphicon glyphicon-remove"></span> De 4 a 30 caracteres. Letras, números y espacios.</p>
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.Descripcion, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.Descripcion, new { htmlAttributes = new { @class = "form-control" } })
+                @{ if (ViewData.ContainsKey("formatodescripproyecto"))
+                    {
+                        <p class="text-danger" style="margin-left: 1em;"><span class="glyphicon glyphicon-remove"></span> De 5 a 200 caracteres.</p>
+
+                    }
                 }
-            }
+            </div>
         </div>
-    </div>
 
-    <div class="form-group">
-        @Html.LabelFor(model => model.Descripcion, htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.EditorFor(model => model.Descripcion, new { htmlAttributes = new { @class = "form-control" } })
-            @{ if (ViewData.ContainsKey("formatodescripproyecto"))
-                {
-                    <p class="text-danger" style="margin-left: 1em;"><span class="glyphicon glyphicon-remove"></span> De 5 a 200 caracteres.</p>
-
+        <div class="form-group">
+            <label class="control-label col-md-2" for="creador">Creador:</label>
+            <div class="col-md-10">
+                @{
+                    @Html.DropDownList("creador", new SelectList((System.Collections.IEnumerable)ViewData["listaNicks"]), new { @class = "form-control" });
                 }
-            }
+            </div>
         </div>
-    </div>
 
-    <div class="form-group">
-        <label class="control-label col-md-2" for="creador">Creador:</label>
-        <div class="col-md-10">
-            @{
-                @Html.DropDownList("creador", new SelectList((System.Collections.IEnumerable)ViewData["listaNicks"]), new { @class = "form-control" });
-            }
+        <div class="form-group">
+            <div class="col-md-offset-2 col-md-10">
+                <input type="submit" value="Crear" class="btn btn-default" />
+            </div>
         </div>
     </div>
-
-    <div class="form-group">
-        <div class="col-md-offset-2 col-md-10">
-            <input type="submit" value="Crear" class="btn btn-default" />
-        </div>
-    </div>
-</div>
 }
 
 <div>
