--- a/MVC_MultitecUA/Views/Proyecto/Edit.cshtml
+++ b/MVC_MultitecUA/Views/Proyecto/Edit.cshtml
@@ -24,6 +24,15 @@
             <div class="col-md-10">
                 @Html.EditorFor(model => model.Nombre, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Nombre, "", new { @class = "text-danger" })
+                @{ if (ViewData.ContainsKey("nombreproyecto"))
+                    {
+                        <p class="text-danger" style="margin-left: 1em;"><span class="glyphicon glyphicon-remove"></span> El nombre de este evento ya existe</p>
+                    }
+                    else if (ViewData.ContainsKey("fomatonombreproyecto"))
+                    {
+                        <p class="text-danger" style="margin-left: 1em;"><span class="glyphicon glyphicon-remove"></span> De 4 a 30 caracteres. Letras, números y espacios.</p>
+                    }
+                }
             </div>
         </div>
 
@@ -32,6 +41,12 @@
             <div class="col-md-10">
                 @Html.EditorFor(model => model.Descripcion, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Descripcion, "", new { @class = "text-danger" })
+                @{ if (ViewData.ContainsKey("formatodescripproyecto"))
+                    {
+                        <p class="text-danger" style="margin-left: 1em;"><span class="glyphicon glyphicon-remove"></span> De 5 a 200 caracteres.</p>
+
+                    }
+                }
             </div>
         </div>
 
