Redirección a index e indexadmin

--- a/MVC_MultitecUA/Views/Home/Index.cshtml
+++ b/MVC_MultitecUA/Views/Home/Index.cshtml
@@ -1,130 +1,8 @@
 ﻿@{
-    ViewBag.Title = "Panel de Administración";
+    ViewBag.Title = "Index";
 }
 
 <div class="jumbotron" style="text-align:center">
-    <h1>PANEL DE ADMINISTRACIÓN</h1>
+    <h1>Página Principal</h1>
 </div>
 
-<div class="row">
-	<div class="col-md-3" style="text-align:center;">
-		<a href="../Usuario" style="text-decoration: none;">
-			<h2>Usuarios</h2>
-			<span class="icon-user" style="font-size:80px;"></span>
-			<br />
-		</a>
-	</div>
-	<div class="col-md-3" style="text-align:center">
-		<a href="../Noticia" style="text-decoration: none;">
-			<h2>Noticias</h2>
-			<span class="icon-newspaper" style="font-size:80px;"></span>
-			<br />
-		</a>
-	</div>
-	<div class="col-md-3" style="text-align:center">
-		<a href="../Proyecto" style="text-decoration: none;">
-			<h2>Proyectos</h2>
-			<span class="icon-doc-text-inv" style="font-size:80px;"></span>
-			<br />
-		</a>
-	</div>
-	<div class="col-md-3" style="text-align:center">
-		<a href="../Servicio" style="text-decoration: none;">
-			<h2>Servicios</h2>
-			<span class="icon-server" style="font-size:80px;"></span>
-			<br />
-		</a>
-	</div>
-</div>
-<div class="row">
-    <div class="col-md-3" style="text-align:center">
-        <a href="../Solicitud" style="text-decoration: none;">
-            <h2>Solicitudes</h2>
-            <span class="icon-sticky-note" style="font-size:80px;"></span>
-            <br />
-        </a>
-    </div>
-    <div class="col-md-3" style="text-align:center">
-        <a href="../Mensaje" style="text-decoration: none;">
-            <h2>Mensajes</h2>
-            <span class="icon-comment" style="font-size:80px;"></span>
-            <br />
-        </a>
-    </div>
-    <div class="col-md-3" style="text-align:center">
-        <a href="../Evento" style="text-decoration: none;">
-            <h2>Eventos</h2>
-            <span class="icon-campsite" style="font-size:80px;"></span>
-            <br />
-        </a>
-    </div>
-    <div class="col-md-3" style="text-align:center">
-        <a href="../Recuerdo" style="text-decoration: none;">
-            <h2>Recuerdos</h2>
-            <span class="icon-lightbulb" style="font-size:80px;"></span>
-            <br />
-        </a>
-    </div>
-</div>
-<div class="row">
-    <div class="col-md-3" style="text-align:center">
-        <a href="../CategoriaUSuario" style="text-decoration: none;">
-            <h2>Categorías Usuarios</h2>
-            <span class="icon-user" style="font-size:80px;"></span>
-            <br />
-        </a>
-    </div>
-    <div class="col-md-3" style="text-align:center">
-        <a href="../CategoriaProyecto" style="text-decoration: none;">
-            <h2>Categorías Proyectos</h2>
-            <span class="icon-doc-text-inv" style="font-size:80px;"></span>
-            <br />
-        </a>
-    </div>
-    <!--
-    <div class="col-md-3" style="text-align:center">
-        <a href="../Notificacion" style="text-decoration: none;">
-            <h2>Notificaciones</h2>
-            <span class="icon-mail-alt" style="font-size:80px;"></span>
-            <br />
-        </a>
-    </div>
-    <div class="col-md-3" style="text-align:center">
-        <a href="../NotificacionUsuario" style="text-decoration: none;">
-            <h2>Not.Usuarios</h2>
-            <span class="icon-user" style="font-size:80px;"></span>
-            <br />
-        </a>
-    </div>-->
-</div>
-<!--
-<div class="row">
-	<div class="col-md-3" style="text-align:center">
-		<a href="../NotificacionMensaje" style="text-decoration: none;">
-			<h2>Not.Mensajes</h2>
-			<span class="icon-comment" style="font-size:80px;"></span>
-			<br />
-		</a>
-	</div>
-	<div class="col-md-3" style="text-align:center">
-		<a href="../NotificacionProyecto" style="text-decoration: none;">
-			<h2>Not.Proyectos</h2>
-			<span class="icon-doc-text-inv" style="font-size:80px;"></span>
-			<br />
-		</a>
-	</div>
-	<div class="col-md-3" style="text-align:center">
-		<a href="../NotificacionSolicitud" style="text-decoration: none;">
-			<h2>Not.Solicitud</h2>
-			<span class="icon-sticky-note" style="font-size:80px;"></span>
-			<br />
-		</a>
-	</div>
-	<div class="col-md-3" style="text-align:center">
-		<a href="../NotificacionEvento" style="text-decoration: none;">
-			<h2>Not.Eventos</h2>
-			<span class="icon-campsite" style="font-size:80px;"></span>
-			<br />
-		</a>
-	</div>
-</div>-->
