--- a/MVC_MultitecUA/Views/Evento/porProyecto.cshtml
+++ b/MVC_MultitecUA/Views/Evento/porProyecto.cshtml
@@ -8,64 +8,65 @@
 <p class="text-center">
     <label>@Html.ActionLink("Inicio", "Index", "Home")</label><span> >> </span><label>@Html.ActionLink("Eventos", "Index")</label><span> >> </span><label>@ViewBag.Title</label>
 </p>
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
 <table class="table">
     <tr>
+        <th>
+            @Html.DisplayNameFor(model => model.Id)
+        </th>
         <th>
             @Html.DisplayNameFor(model => model.Nombre)
         </th>
         <th>
-            Descripción
-            <!--Html.DisplayNameFor(model => model.Descripcion) -->
-        </th>
-        <th>
             Inicio
-            <!--Html.DisplayNameFor(model => model.FechaInicio)-->
         </th>
         <th>
             Fin
-            <!-- @Html.DisplayNameFor(model => model.FechaFin) -->
         </th>
         <th>
             Inicio de inscripción
-            <!-- Html.DisplayNameFor(model => model.FechaInicioInscripcion) -->
         </th>
         <th>
             Tope de inscripción
-            <!--Html.DisplayNameFor(model => model.FechaTopeInscripcion)-->
         </th>
-        <th></th>
+        <th>
+            Proyectos asociados
+        </th>
+        <th>
+            Acciones
+        </th>
     </tr>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Nombre)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Descripcion)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.FechaInicio)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.FechaFin)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.FechaInicioInscripcion)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.FechaTopeInscripcion)
-        </td>
+    @foreach (var item in Model)
+    {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.Id)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Nombre)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.FechaInicio)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.FechaFin)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.FechaInicioInscripcion)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.FechaTopeInscripcion)
+            </td>
+            <td>
+                @Html.ActionLink("Proyectos", "ProyectosPorEvento", "Proyecto", new { id = item.Id }, null)
+            </td>
 
-        <td style="text-align: center;">
-            @Html.ActionLink("Editar", "Edit", new { id = item.Id }) |
-            @Html.ActionLink("Detalles", "Details", new { id = item.Id }) |
-            @Html.ActionLink("Borrar", "Delete", new { id = item.Id })
-        </td>
-    </tr>
-}
+            <td style="text-align: center;">
+                @Html.ActionLink("Editar", "Edit", new { id = item.Id }) |
+                @Html.ActionLink("Detalles", "Details", new { id = item.Id }) |
+                @Html.ActionLink("Borrar", "Delete", new { id = item.Id })
+            </td>
+        </tr>
+    }
 
 </table>
