--- a/MVC_MultitecUA/Views/Proyecto/Create.cshtml
+++ b/MVC_MultitecUA/Views/Proyecto/Create.cshtml
@@ -50,7 +50,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Descripcion, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Descripcion, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.TextArea("Descripcion", new { @class = "form-control" })
                 @{ if (ViewData.ContainsKey("formatodescripproyecto"))
                     {
                         <p class="text-danger" style="margin-left: 1em;"><span class="glyphicon glyphicon-remove"></span> De 5 a 200 caracteres.</p>
