--- a/MVC_MultitecUA/Views/Proyecto/Details.cshtml
+++ b/MVC_MultitecUA/Views/Proyecto/Details.cshtml
@@ -4,30 +4,22 @@
     ViewBag.Title = "Detalles";
 }
 
-<h2>Detalles del Proyecto: @ViewData["titulo"]</h2>
-
-<p class="text-center">
-    <label>@Html.ActionLink("Inicio", "Index", "Home")</label><span> >> </span><label>@Html.ActionLink("Proyectos", "Index")</label><span> >> </span><label>@ViewBag.Title</label>
-</p>
-
-
-
 @{
     if (TempData.ContainsKey("proyectocreado"))
     {
         <h2 class="text-success">@TempData["proyectocreado"]</h2>
         TempData.Remove("proyectocreado");
     }
-    else if (TempData.ContainsKey("eventoeditado"))
+    else if (TempData.ContainsKey("proyectoeditado"))
     {
         <h2 class="text-success">@TempData["proyectoeditado"]</h2>
         TempData.Remove("proyectoeditado");
     }
     else
     {
-        <h2>Detalles del Evento: @ViewData["NombreEvento"]</h2>
+        <h2>Detalles del Proyecto: @ViewData["titulo"]</h2>
         <p class="text-center">
-            <label>@Html.ActionLink("Inicio", "Index", "Home")</label><span> >> </span><label>@Html.ActionLink("Eventos", "Index")</label><span> >> </span><label>@ViewBag.Title</label>
+            <label>@Html.ActionLink("Inicio", "Index", "Home")</label><span> >> </span><label>@Html.ActionLink("Proyectos", "Index")</label><span> >> </span><label>@ViewBag.Title</label>
         </p>
     }
 }
