--- a/MVC_MultitecUA/Views/Shared/_Layout.cshtml
+++ b/MVC_MultitecUA/Views/Shared/_Layout.cshtml
@@ -25,20 +25,28 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    @{ if (Session["usuario"] == null || (Session["usuario"] != null && Session["modoAdmin"].ToString() == "false")){
-                        <li>@Html.ActionLink("Proyectos", "Index", "")</li>
-                        <li>@Html.ActionLink("Eventos", "Index", "")</li>
-                        <li>@Html.ActionLink("Servicios", "Index", "")</li>
+                    @{ if (Session["usuario"] == null || (Session["usuario"] != null && Session["modoAdmin"].ToString() == "false"))
+                        {
+                            <li>@Html.ActionLink("Proyectos", "Index", "")</li>
+                            <li>@Html.ActionLink("Eventos", "Index", "")</li>
+                            <li>@Html.ActionLink("Servicios", "Index", "")</li>
+                            <li><a href="http://multitecua.ml" target="_blank">Contacto / Acerca de</a></li>
+                        }
                     }
-                    }
-                    <li><a href="http://multitecua.ml" target="_blank">Contacto / Acerca de</a></li>
                 </ul>
                 @{if (Session["usuario"] != null)
                     {
                 <ul class="nav navbar-nav navbar-right">
-
+                    @{if (Session["modoAdmin"].ToString() == "false")
+                        {
+                            <li>
+                                @Html.ActionLink("¡Hola " + Session["usuario"].ToString() + "!", "", "", null)
+                            </li>
+                        }
+                    }
                     @{ if (Session["modoAdmin"].ToString() == "true")
                         {
+
                             <li class="dropdown">
                                 <a class="dropdown-toggle" data-toggle="dropdown" href="#">
                                     Administrar
@@ -70,10 +78,6 @@
                             </li>
                         }
                     }
-                    <li style="color: white; height:100%;">
-                        <!--Html.ActionLink("Hola " + Session["usuario"].ToString() + "!", "Details", "Usuario", routeValues: null, null)-->
-                        <a href="">¡Hola @Session["usuario"].ToString()!</a>
-                    </li>
                     <li>
                         @Html.ActionLink("Cerrar Sesión", "Logout", "Sesion")
                     </li>
