--- a/MVC_MultitecUA/Views/Noticia/Delete.cshtml
+++ b/MVC_MultitecUA/Views/Noticia/Delete.cshtml
@@ -31,11 +31,11 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.Foto)
+            @Html.DisplayNameFor(model => model.FotoNoticia)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Foto)
+            @Html.DisplayFor(model => model.FotoNoticia)
         </dd>
 
         <dt>
