--- a/MVC_MultitecUA/Views/Noticia/Edit.cshtml
+++ b/MVC_MultitecUA/Views/Noticia/Edit.cshtml
@@ -45,13 +45,13 @@
             </div>
         </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.Foto, htmlAttributes: new { @class = "control-label col-md-2" })
+        <!--<div class="form-group">
+            Html.LabelFor(model => model.Foto, htmlAttributes: new { class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Foto, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Foto, "", new { @class = "text-danger" })
+                <input type="file" id="file"/>
+                Html.ValidationMessageFor(model => model.FotoNoticia, "", new { class = "text-danger" })
             </div>
-        </div>
+        </div>-->
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
