--- a/MVC_MultitecUA/Views/Shared/_Layout.cshtml
+++ b/MVC_MultitecUA/Views/Shared/_Layout.cshtml
@@ -34,7 +34,7 @@
 								</a>
 								<ul class="dropdown-menu">
 									<li>@Html.ActionLink("Mis proyectos", "", "")</li>
-									<li>@Html.ActionLink("Proyectos ropuestos", "", "")</li>
+									<li>@Html.ActionLink("Proyectos propuestos", "", "")</li>
 									<li>@Html.ActionLink("Proyectos en desarrollo", "", "")</li>
 									<li>@Html.ActionLink("Nuevo Proyecto", "", "")</li>
 								</ul>
