--- a/MVC_MultitecUA/Views/Solicitud/Create.cshtml
+++ b/MVC_MultitecUA/Views/Solicitud/Create.cshtml
@@ -20,7 +20,8 @@
     <div class="form-group">
         @Html.LabelFor(model => model.Nick_Solicitante, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
-            @Html.DropDownList("Nick_Solicitante", new SelectList((System.Collections.IEnumerable)ViewData["listaNicks"]), new { @class = "form-control" })
+
+            @Html.DropDownList("Nick_Solicitante", new SelectList((System.Collections.IEnumerable)ViewData["ListaNicks"]), new { @class = "form-control" })
             <!--Html.ValidationMessageFor(model => model.Nick_Solicitante.Id, "", new { class = "text-danger" })-->
         </div>
     </div>
