--- a/MVC_MultitecUA/Views/CategoriaUsuario/Index.cshtml
+++ b/MVC_MultitecUA/Views/CategoriaUsuario/Index.cshtml
@@ -9,22 +9,36 @@
     <label>@Html.ActionLink("Inicio", "Index", "Home")</label><span> >> </span><label>@ViewBag.Title</label>
 </p>
 
+<p>
+    @Html.ActionLink("Nueva Categoría de Usuario", "Create")
+</p>
 
 @{ if (TempData.ContainsKey("CUeditada"))
     {
-        <p class="text-success" style="font-size:1.25em;"><span class="glyphicon glyphicon-ok-sign"></span> Se ha creado la categoria @TempData["CUeditada"].</p>
+        <p class="text-success"><span class="glyphicon glyphicon-ok-sign"></span> Se ha editado la categoria @TempData["CUeditada"].</p>
         TempData.Remove("CUeditada");
     }
     else if (TempData.ContainsKey("CUcreada"))
     {
-        <p class="text-success" style="font-size:1.25em;"><span class="glyphicon glyphicon-ok-sign"></span> Se ha creado la categoria @TempData["CUcreada"].</p>
+        <p class="text-success"><span class="glyphicon glyphicon-ok-sign"></span> Se ha creado la categoria @TempData["CUcreada"].</p>
         TempData.Remove("CUcreada");
     }
 }
 
-<p>
-    @Html.ActionLink("Nueva Categoría de Usuario", "Create")
-</p>
+@{
+    if (TempData["mal"] != null)
+    {
+        <p class="text-danger"><span class="glyphicon glyphicon-remove"></span> @TempData["mal"] </p>
+        TempData.Remove("mal");
+    }
+    else
+    if (TempData["bien"] != null)
+    {
+        <p class="text-success"><span class="glyphicon glyphicon-check"></span> @TempData["bien"] </p>
+        TempData.Remove("bien");
+    }
+}
+
 <table class="table">
     <tr>
         <th>
