--- a/MVC_MultitecUA/Views/Recuerdo/Details.cshtml
+++ b/MVC_MultitecUA/Views/Recuerdo/Details.cshtml
@@ -8,11 +8,11 @@
 @{
     if (TempData.ContainsKey("creado"))
     {
-        <h2 class="text-danger">Se ha creado el recuerdo: @ViewData["recuerdo"]</h2>
+        <h2 class="text-success"><span class="glyphicon glyphicon-check"></span> Se ha creado el recuerdo: @ViewData["recuerdo"]</h2>
     }
     else if (TempData.ContainsKey("editado"))
     {
-        <h2 class="text-danger">Se ha editado con exito el recuerdo: @ViewData["recuerdo"]</h2>
+        <h2 class="text-success"><span class="glyphicon glyphicon-check"></span> Se ha editado con exito el recuerdo: @ViewData["recuerdo"]</h2>
     }
     else
     {
