Proyectos > Mis proyectos empezado

--- a/MVC_MultitecUA/Views/Shared/_Layout.cshtml
+++ b/MVC_MultitecUA/Views/Shared/_Layout.cshtml
@@ -33,7 +33,7 @@
 									<span class="caret"></span>
 								</a>
 								<ul class="dropdown-menu">
-									<li>@Html.ActionLink("Mis proyectos", "", "")</li>
+									<li>@Html.ActionLink("Mis proyectos", "MisProyectos", "Proyecto")</li>
 									<li>@Html.ActionLink("Proyectos propuestos", "", "")</li>
 									<li>@Html.ActionLink("Proyectos en desarrollo", "", "")</li>
 									<li>@Html.ActionLink("Nuevo Proyecto", "", "")</li>
