Funciones basicas de proyecto en vista usuario

--- a/MVC_MultitecUA/Views/Proyecto/Details.cshtml
+++ b/MVC_MultitecUA/Views/Proyecto/Details.cshtml
@@ -59,6 +59,7 @@
         </dt>
 
         <dd>
+            <!--Html.ActionLink(ViewData["creador"], "Detalles", "Usuario", ViewData["idCreador"], null)-->
             @ViewData["creador"]
         </dd>
 
