--- a/MVC_MultitecUA/Views/Shared/_Layout.cshtml
+++ b/MVC_MultitecUA/Views/Shared/_Layout.cshtml
@@ -34,9 +34,8 @@
 								</a>
 								<ul class="dropdown-menu">
 									<li>@Html.ActionLink("Mis proyectos", "MisProyectos", "Proyecto")</li>
-									<li>@Html.ActionLink("Proyectos propuestos", "", "")</li>
-									<li>@Html.ActionLink("Proyectos en desarrollo", "", "")</li>
-									<li>@Html.ActionLink("Nuevo Proyecto", "", "")</li>
+									<li>@Html.ActionLink("Proyectos presentados", "ProyectosPresentados", "Proyecto")</li>
+									<li>@Html.ActionLink("Nuevo Proyecto", "Crear", "Proyecto")</li>
 								</ul>
 							</li>
 							<li class="dropdown">
