--- a/MVC_MultitecUA/Views/Proyecto/VistaUsuario/MisProyectos.cshtml
+++ b/MVC_MultitecUA/Views/Proyecto/VistaUsuario/MisProyectos.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<MultitecUAGenNHibernate.EN.MultitecUA.ProyectoEN>
 
 @{
-    ViewBag.Title = "Proyectos en los que participas";
+    ViewBag.Title = ViewData["titulo"];
 }
 
 <h2>Proyectos en los que participas</h2>
@@ -22,7 +22,7 @@
     {
         <tr>
             <td>
-                @Html.DisplayFor(modelItem => item.Nombre)
+                @Html.ActionLink(item.Nombre, "Detalles", new { id = item.Id })
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Descripcion)
